<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView_caseworker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight=".25"
            android:gravity="end"
            android:text="@string/caseworker"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinner_caseworker"
            style="@style/Widget.AppCompat.DropDownItem.Spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_weight=".75"
            android:foreground="?android:selectableItemBackground"/>

    </LinearLayout>

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setup_name"
        android:inputType="textCapWords"
        android:textDirection="locale"
        android:layoutDirection="locale"/>

    <EditText
        android:id="@+id/input_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setup_phone"
        android:inputType="phone"
        android:layoutDirection="locale"
        android:textDirection="locale"/>

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/input_layout_name"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<android.support.design.widget.TextInputEditText-->
            <!--android:id="@+id/input_name"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/setup_name"-->
            <!--android:inputType="textCapWords"-->
            <!--android:textDirection="locale"-->
            <!--android:layoutDirection="locale"/>-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/input_layout_num"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<android.support.design.widget.TextInputEditText-->
            <!--android:id="@+id/input_num"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/setup_phone"-->
            <!--android:inputType="phone"-->
            <!--android:layoutDirection="locale"-->
            <!--android:textDirection="locale"/>-->

    <!--</android.support.design.widget.TextInputLayout>-->

</LinearLayout>