<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.utos.android.safe.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/button_urgent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/main_emerg_btn"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="startUrgent"
            android:orientation="vertical"
            android:theme="@style/ThemeMainUrgentButtons">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/btn_urgent"
                android:textColor="@color/colorRed"
                android:textSize="25sp"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                android:tint="@color/colorRed"
                app:srcCompat="@drawable/ic_call"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_non_urgent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/main_btn"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="startNonUrgent"
            android:orientation="vertical"
            android:theme="@style/ThemeMainButtons">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/btn_non_urgent"
                android:textColor="@color/colorYellow"
                android:textSize="25sp"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_assignment"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_call_caseworker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/main_btn"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="callCaseworker"
            android:orientation="vertical"
            android:theme="@style/ThemeMainButtons">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/call_case_worker"
                android:textColor="@color/colorYellow"
                android:textSize="25sp"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_call"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:baselineAligned="false"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/main_btn"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="ircDialog"
            android:orientation="vertical"
            android:theme="@style/ThemeMainButtons">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/irc"
                android:textColor="@color/colorYellow"
                android:textSize="18sp"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_info"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/main_btn"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="policeDialog"
            android:orientation="vertical"
            android:theme="@style/ThemeMainButtons">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/police"
                android:textColor="@color/colorYellow"
                android:textSize="18sp"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_police"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/main_btn"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="hospitalDialog"
            android:orientation="vertical"
            android:theme="@style/ThemeMainButtons">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hospital"
                android:textColor="@color/colorYellow"
                android:textSize="18sp"/>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="2dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_local_hospital"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>